<resources>
    <string name="app_name">SportDetailApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_header">This is Header</string>
    <string name="vs">Vs</string>
    <string name="titel">Title</string>
    <string name="team_name">team_name</string>
    <string name="team_score">team_name</string>
    <string name="team_over">team_name</string>
    <string name="_nth_odi">nth ODI</string>
    <string name="date_time">Date_time</string>
    <string name="this_is_result">This is result of current match</string>
    <string name="this_is_venue">This is venue of current match</string>
    <string name="View_detail">Detail</string>
</resources>