<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bg_card_detail"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt_match_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/this_is_result"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@+id/txt_match_result"
                android:id="@+id/txt_match_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/this_is_header"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_team_logo1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icc"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        android:weightSum="3">

                    <TextView
                        android:id="@+id/txt_teamName"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/team_name"
                        android:textAllCaps="true"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/txt_teamScore"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/team_score"
                        android:textAllCaps="true"
                        android:textColor="@color/grey_700"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/txt_teamOver"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/team_over"
                        android:textAllCaps="true"
                        android:textColor="@color/grey_700"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:layout_weight="1"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    app:cardCornerRadius="50dp"
                    android:padding="8dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="#6284EF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/vs"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_team_logo2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icc"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/txt_teamName2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/team_name"
                            android:textAllCaps="true"
                            android:textColor="@color/grey_700"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/txt_teamScore2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/team_score"
                            android:textAllCaps="true"
                            android:textColor="@color/grey_700"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/txt_teamOver2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/team_over"
                            android:textAllCaps="true"
                            android:textColor="@color/grey_700"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:layout_weight="1"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>